[package]
name = "mm32f3270_pac"
version = "0.1.0"
edition = "2021"
authors = ["mattdeeds <mattrdeeds@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
critical-section = { version = "1.1.2", optional = true }
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.3", optional = true }
vcell = "0.1.3"

[features]
rt = ["cortex-m-rt/device"]